--- a/INSTALL
+++ b/INSTALL
@@ -1,19 +1,21 @@
 #!/bin/sh
 #
-# Install script - installs all .sh files to directory as symlinks
+# Install all .sh script files by putting symlinks into a destination directory (default is users's ~/bin dir)
 
-DST=~/bin #default install directory
+DST=~/bin
 
-
+# Not more thank one parameter is allowed
 if [ $# -gt 1 ] ; then
     echo "usage: $0 [<destination directory, default: $DST)>]"
     exit 1
 fi
 
+# If no parameter is given, destination directory is set to default
 if [ $# -eq 1 ] ; then
     DST=$1
 fi
 
+# Make symbolic links to all .sh files in directory
 for f in *.sh ; do
     if [ "$f" = "$(basename "$0")" -o ! -x "$f" ] ; then
         continue
